# gh-trending-notifier

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: daily.yml
data/: state.json
data/previews/: 2026-06-07.html  2026-06-07.txt  2026-06-11.html  2026-06-11.txt  2026-06-13.html  2026-06-13.txt
data/runs/: 2026-06-07.json  2026-06-11.json  2026-06-13.json
data/sent/: 2026-06-07.json  2026-06-11.json  2026-06-13.json
docs/: plan.md
src/gh_trending_notifier/: cli.py  email_sender.py  state.py
tests/: test_dedupe_limit.py  test_state_cli.py
